adjust alignment issues in header

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -15,55 +15,66 @@
       display: none;
     }
   }
+}
 
-  .heading {
-    color: white;
-    font-weight: bold;
-    flex-grow: 1;
-    margin-left: 0.5rem;
-    font-size: 1.5rem;
-    line-height: 2rem;
+.heading {
+  color: white;
+  font-weight: bold;
+  flex-grow: 1;
+  margin-left: 0.5rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
 
-    @media (min-width: 768px) {
-      margin-left: 1rem;
-      font-size: 1.875rem;
-      line-height: 2.25rem;
-    }
-  }
-
-  .headingButton {
-    border-radius: 0.5rem;
-    width: 2rem;
-    height: 2rem;
-    border: none;
-
-    @media (min-width: 768px) {
-      width: 2.5rem;
-      height: 2.5rem;
-    }
-  }
-
-  .headingLink {
-    text-decoration: none;
-    font-weight: bold;
-  }
-
-  .headingButton,
-  .headingLink {
-    padding: 0.25rem;
-    color: white;
-    /* Disable the translucent gray box on iOS Safari when :active.
-       See https://stackoverflow.com/a/33681490. */
-    -webkit-tap-highlight-color: rgba(0 0 0 / 0);
-
-    &:active {
-      color: rgba(255 255 255 / 50%);
-    }
+  @media (min-width: 768px) {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
 .header.centerTitle .heading {
   text-align: center;
+  margin-left: 0;
+}
+
+.headingButtonContainer {
+  border-radius: 0.5rem;
+  /* Use min-width because the "Done" button will not be a square */
+  min-width: 2rem;
+  height: 2rem;
+  border: none;
+
+  @media (min-width: 768px) {
+    min-width: 2.5rem;
+    height: 2.5rem;
+  }
+
+  > .headingLink {
+    height: 100%;
+  }
+}
+
+.headingLink {
+  text-decoration: none;
+  font-weight: bold;
+  display: block;
+
+  &.text {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.headingButton,
+.headingLink {
+  padding: 0.25rem;
+  color: white;
+  /* Disable the translucent gray box on iOS Safari when :active.
+     See https://stackoverflow.com/a/33681490. */
+  -webkit-tap-highlight-color: rgba(0 0 0 / 0);
+
+  &:active {
+    color: rgba(255 255 255 / 50%);
+  }
 }
 
 .headingIcon {
@@ -76,11 +87,11 @@
   }
 }
 
-.topRightButton {
-  @media (min-width: 992px) {
-    /* use visibility:hidden instead of display:none so that the button
-       still takes up space, or else the title won't be centered */
-    visibility: hidden;
+@media (min-width: 992px) {
+  .topRightButton,
+  /* needed to counteract the specificity rules above ... ugh */
+  .topRightButton.headingLink.text {
+    display: none;
   }
 }
 
